# warsztat-ai-multiagent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE.md  README.md  conftest.py  pyproject.toml  run.sh
.github/: copilot-instructions.md
00_setup/: schema.py  smoke_test.py
01_simple_call/: README.md  starter.py
02_function_calling/: README.md  starter.py
03_agentic_loop/: README.md  starter.py
04_hello/: README.md  agent.py
05_sql_agent/: README.md  agent.py
06_evaluation/: README.md  test_config.json
07_sql_agent_tuning/: README.md  agent.py
08_report_system/: README.md  agent.py
09_tests/: README.md  test_report_system.py  test_sql_agent.py
10_guardrails/: README.md  agent.py
common/: exercise.py  llm.py  model.py
demo_00_system/: README.md  agent.py
demo_01_halucynacja/: run.py
demo_02_function_calling/: run.py
demo_09_transfer/: agent.py
demo_13_mcp/: agent.py
demo_14_injection/: agent.py
demo_14_write/: agent.py
demo_mcp_playwright/: agent.py
ex_00_setup/: schema.py  smoke_test.py
ex_01_simple_call/: README.md  starter.py
ex_02_function_calling/: starter.py  tools.py
ex_03_agentic_loop/: README.md  db_tools.py  starter.py
ex_04_hello/: README.md  agent.py
ex_05_pamiec_i_sesje/: README.md  agent.py
ex_05_pierwsze_narzedzie/: README.md  agent.py
ex_05_sql_agent/: README.md  agent.py
ex_06_evaluation/: README.md
ex_06_instrukcja_grounding/: README.md  agent.py
ex_06_pamiec_dlugoterminowa/: README.md  starter.py
ex_06_pierwsze_narzedzie/: README.md  agent.py
ex_07_docstring/: README.md  (+1 more)
(+274 files in other folders)
