[project]
name = "sages-adk-multiagent"
version = "0.1.0"
description = "Ćwiczenia do szkolenia AI Multi-Agentic (Google ADK 2.0 + OpenAI, baza Chinook)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Część 2 - rdzeń: agenci, adk web / run. Extra [eval] dodaje silnik ewaluacji
    # (moduł 7 i 12) - bez niego `adk eval` / AgentEvaluator wymaga vertexai i pada.
    "google-adk[eval]>=2.0",
    # LiteLLM - pozwala ADK wołać OpenAI (jeden klucz na całe szkolenie)
    "litellm>=1.0",
    # Część 1 - wywołania LLM bezpośrednio przez OpenAI SDK
    "openai>=1.0",
    "python-dotenv>=1.0",
    # Raporty: artefakty generowane przez agentów (część 2)
    "fpdf2>=2.7",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    # Testy automatyczne (moduł 12)
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # Ładny output w części 1
    "rich>=13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ex_09_tests"]
